--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^6.1.8",
     "tough-cookie": "^4.1.3",
